fix screen scrollbar and video

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,7 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+body {
+  overflow-x: hidden;
+}
